# gitlab_changelog_generator

./: README.md  pyproject.toml
gitlab_changelog_generator/: main.py
